--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,4 +21,6 @@ jobs:
       run: dotnet restore ./src/GTour/GTour.csproj
     - name: Build
       run: dotnet build ./src/GTour/GTour.csproj --no-restore
+    - name: Push with dotnet
+      run: dotnet nuget push nuget-packages/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
 
