--- a/src/STGTour.DemoWASM/STGTour.DemoWASM.csproj
+++ b/src/STGTour.DemoWASM/STGTour.DemoWASM.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\GTour\GTour.csproj" />
+    <ProjectReference Include="..\STGTour.DemoComponents\STGTour.DemoComponents.csproj" />
   </ItemGroup>
   
 </Project>
