Fixed tsc automated build

--- a/src/GTour.Dependencies/GTour.Dependencies.csproj
+++ b/src/GTour.Dependencies/GTour.Dependencies.csproj
@@ -29,6 +29,7 @@
 
   <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
     <Exec Command="npm install" WorkingDirectory="npm" />
+    <Exec Command="npm run tsc" WorkingDirectory="npm" />
   </Target>
   
 </Project>
