--- a/src/GTour.Dependencies/npm/package.json
+++ b/src/GTour.Dependencies/npm/package.json
@@ -5,14 +5,16 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "tsc": "tsc"
   },
   "author": "Trevor Mare",
   "license": "ISC",
   "dependencies": {
     "@popperjs/core": "^2.9.2",
     "@types/popper.js": "^0.4.3",
-    "requirejs": "^2.3.6"
+    "requirejs": "^2.3.6",
+    "typescript": "^4.3.5"
   },
   "devDependencies": {
     "@types/node": "^16.3.0"
