--- a/src/GTour/GTour.csproj
+++ b/src/GTour/GTour.csproj
@@ -12,6 +12,7 @@
       <RepositoryUrl>https://github.com/TrevorMare/STGTour</RepositoryUrl>
       <PackageProjectUrl>https://github.com/TrevorMare/STGTour</PackageProjectUrl>
       <PackageReleaseNotes>
+        1.0.7 Collapsed dependencies into one package.
         1.0.6 Included dependencies in nuget build.
         1.0.5 Removed project dependencies.
         1.0.4 Added attributes to assist in E2E testing.
